@@ -19,5 +19,5 @@ if test -z "$w3_args"; then
     w3_browse_url "http://www.slashdot.org/"
 else
     escaped_args=`w3_url_of_arg $w3_args`
-    w3_browse_url "http://www.slashdot.org/search.pl?query=${escaped_args}"
+    w3_browse_url "http://www.slashdot.org/index2.pl?fhfilter=${escaped_args}"
 fi
