@@ -1,2 +1,2 @@
 fsfdir emacs
-Emacs interface to the MH mail system
+highly extensible
