@@ -1,5 +1,5 @@
 github browser
-impress.js
+last activity.*ago
 github window-manager
 wmfs
 github surfraw
