@@ -1,2 +1,2 @@
 ixquick foo
-Results 1 - \d+ of
+Fighters
