@@ -1,7 +1,7 @@
 openbsd Raadt
 About [\d,]+ results
 openbsd -mail Raadt
-Theo de <b>Raadt</b>
+Theo
 openbsd -pr 666
 DESCRIPTION
 openbsd -ps surfraw
